--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <h1 class="header__title">Добро пожаловать на мой сайт !</h1>
+    <header class="header center">
+        <div class="header__header">
+            <h1 class="header__title">Добро пожаловать на мой сайт !</h1>
          <p class="header__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <b>поехали</b> и <b>приступай</b></p>
         <button class="header__button">Поехали!</button>
+        </div>
     </header>
-    <section class="heading">
+    <section class="heading center">
         <div class="for">
-            <div class="for__item_1"><span class="span">Игра 1</span></div>
-            <div class="for__item_2"><span class="span">Игра 2</span></div>
-            <div class="for__item_3"><span class="span">Игра 3</span></div>
+            <div class=" for__item for__item_1"><span class="span">Игра 1</span></div>
+            <div class=" for__item for__item_2"><span class="span">Игра 2</span></div>
+            <div class=" for__item for__item_3"><span class="span">Игра 3</span></div>
         </div>
     </section>
 </body>
